# image-draw-bounding-boxes-service

./: pyproject.toml  requirements.txt
src/: main.py  my_service.py
