[project]
name = "image-draw-bounding-boxes"
version = "1.0.0"

requires-python = ">=3.10"
dependencies = [
    "common-code[test] @ git+https://github.com/swiss-ai-center/common-code.git@main",
    "pillow~=10.4.0",
    "pip~=22.0.2",
    "setuptools~=59.6.0"

]
[tool.pytest.ini_options]
pythonpath = [".", "src"]
addopts = "--cov-config=.coveragerc --cov-report xml --cov-report term-missing --cov=./src"
